@@ -19,6 +19,7 @@ Version 1.3.12+svn:
    * recruitment OOS is fatal now (bug #9723)
    * the server now stores the next scenario send but the host, thus the
      clients no longer restart in the previous scenario
+   * the next scenario now properly loads the recall list     
  * sound:
    * new or improved sounds: ogre hit and die, MP chat
  * units:
