@@ -26,6 +26,10 @@ to Boucman
 
 Recruitment OOS is fatal now.
 
+There have been quite some last minutes MP campaign bug fixes and they might work
+properly again, but it didn't have much testing, please report bugs if they're
+still left.
+
 MP random improvements:
 There is a new rand key for [set_variable] this is MP save, only the WML author
 has to make sure it stays in sync see:
